--- a/1.html
+++ b/1.html
@@ -4,36 +4,97 @@
 <head>
     <title>Web1 - HTML</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
+    <script src="colors.js"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CRL2VR00ZM"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-CRL2VR00ZM');
+    </script>
 </head>
 
-<body>
-    <h1><a href="index.html">WEB</a></h1>
-    <ol>
-        <li><a href="1.html">HTML</a></li>
-        <li><a href="2.html">CSS</a></li>
-        <li><a href="3.html">JavaScript</a></li>
-    </ol>
-    <h2>HTML</h2>
-    <p>
-        <a href="https://www.w3.org/TR/2011/WD-html5-20110405/" target="_blank" title="html5 상세정보">하이퍼 텍스트 마크업 언어(영어:
-            Hyper Text Markup Language, HTML)</a>
-        는 웹 페이지 표시를 위해 개발된 지배적인 <u>마크업</u>
-        언어다. 또한,
-        HTML은 제목, 단락, 목록 등과 같은 본문을 위한 구조적 의미를 나타내는 것뿐만 아니라 링크, 인용과 그 밖의 항목으로 구조적 문서를 만들 수 있는 방법을 제공한다. 그리고 이미지와 객체를 내장하여
-        대화형 양식을
-        생성하는 데 사용될 수 있다. HTML은 웹 페이지 콘텐츠 안의 꺾쇠 괄호에 둘러싸인 "태그"로 되어있는 HTML 요소 형태로 작성한다.
-    </p>
-    <img src="coding.jpg" width="50%">
-    <p>
-        HTML은 웹 브라우저와 같은 HTML 처리 장치의 행동에
-        영향을 주는
-        자바스크립트, 본문과 그 밖의 항목의 외관과 배치를 정의하는 CSS 같은 스크립트를 포함하거나 불러올 수 있다. HTML과 CSS 표준의 공동 책임자인 W3C는 명확하고 표상적인 마크업을 위하여
-        CSS의 사용을
-        권장한다.
 
+<body>
+    <input type="button" style="position:fixed" value="다크모드" onclick="nightDayHandler(this)">
+    <h1><a href="index.html">WEB</a></h1>
+    <div id="grid">
+        <ol>
+            <li><a href="1.html">HTML</a></li>
+            <li><a href="2.html">CSS</a></li>
+            <li><a href="3.html">JavaScript</a></li>
+        </ol>
+        <div id="article">
+            <h2 class="main">HTML</h2>
+            <h3 class="main">VIDEO</h3>
+            <p><iframe width="560" height="315" src="https://www.youtube.com/embed/7T7r_oSp0SE"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+            </p>
+            <p>
+                <a href="https://www.w3.org/TR/2011/WD-html5-20110405/" target="_blank" title="html5 상세정보">하이퍼 텍스트 마크업
+                    언어(영어:
+                    Hyper Text Markup Language, HTML)</a>
+                는 웹 페이지 표시를 위해 개발된 지배적인 <u>마크업</u>
+                언어다. 또한,
+                HTML은 제목, 단락, 목록 등과 같은 본문을 위한 구조적 의미를 나타내는 것뿐만 아니라 링크, 인용과 그 밖의 항목으로 구조적 문서를 만들 수 있는 방법을 제공한다. 그리고 이미지와
+                객체를
+                내장하여
+                대화형 양식을
+                생성하는 데 사용될 수 있다. HTML은 웹 페이지 콘텐츠 안의 꺾쇠 괄호에 둘러싸인 "태그"로 되어있는 HTML 요소 형태로 작성한다.
+            </p>
+            <img src="coding.jpg" width="50%">
+            <p>
+                HTML은 웹 브라우저와 같은 HTML 처리 장치의 행동에
+                영향을 주는
+                자바스크립트, 본문과 그 밖의 항목의 외관과 배치를 정의하는 CSS 같은 스크립트를 포함하거나 불러올 수 있다. HTML과 CSS 표준의 공동 책임자인 W3C는 명확하고 표상적인 마크업을
+                위하여
+                CSS의 사용을
+                권장한다.
+
+            </p>
+            <p>
+        </div>
+    </div>
+    <div id="disqus_thread"></div>
+    <script>
+        /**
+        *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+        *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+        /*
+        var disqus_config = function () {
+        this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+        this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+        };
+        */
+        (function () { // DON'T EDIT BELOW THIS LINE
+            var d = document, s = d.createElement('script');
+            s.src = 'https://web1-sv6rneqcwy.disqus.com/embed.js';
+            s.setAttribute('data-timestamp', +new Date());
+            (d.head || d.body).appendChild(s);
+        })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by
+            Disqus.</a></noscript>
     </p>
-    <p style="margin-top: 45;">
-        HTML HTML HTML HTML HTML HTML HTML HTML HTML HTML HTML HTML HTML HTML HTML HTML HTML HTML HTML HTML
+    <p>
+        <!--Start of Tawk.to Script-->
+        <script type="text/javascript">
+            var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+            (function () {
+                var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+                s1.async = true;
+                s1.src = 'https://embed.tawk.to/6389aa5db0d6371309d23f52/1gj8s2vn0';
+                s1.charset = 'UTF-8';
+                s1.setAttribute('crossorigin', '*');
+                s0.parentNode.insertBefore(s1, s0);
+            })();
+        </script>
+        <!--End of Tawk.to Script-->
     </p>
 </body>
 
